@@ -7,6 +7,7 @@ CHANGELOG Roundcube Webmail
 - Hide MDN and DSN options in compose if disabled by admin (#1490221)
 - Fix checks based on window.ActiveXObject in IE > 10
 - Fix XSS issue in style attribute handling (#1490227)
+- Fix bug where Drafts list wasn't updated on draft-save action in new window (#1490225)
 
 RELEASE 1.1-rc
 --------------
